Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/expression/IllegalParenthesis.out
IllegalParenthesis.java:12:16: compiler.err.illegal.parenthesized.expression
IllegalParenthesis.java:14:26: compiler.err.illegal.parenthesized.expression
2 errors
